@startuml

package xnetwork {
    class "Graph" as xgraph {
        nodes
        edges
        ...
    }
}

package "pyedgebundling" as ppeb {
    class "GUI" as gui {
        UI elements for ant bundle parameter tuning
        --
        antBundle(networkx::Graph, antBundleParameters) : BundledGraph
        plotBundledGraph(BundledGraph)
    }

    class "BundledGraph" as bg {
        edges : CurvedEdge[]
        --
        plot()
    }

    interface "BundleAlgorithm" as ba {
        --
        {abstract} bundle(networkx::Graph) : BundledGraph
    }

    class "AntBundleAlgorithm" as aba {
        phermoneField : PhermoneField
        --
        bundle(networkx::Graph, antBundleParameters) : BundledGraph
        createCurvedEdges()
    }

    class "PhermoneField" as pf {
        field : float[][][]
        r : int
        --
        buildField(networkx::Graph)
        updateField(path:Vector2[])
        evaporate()
        antWalk(Ant)
    }

    class Ant {
        location : Vector2
        goal : Vector2
        path : Vector2[]
        --
        takeStep()
        getLeftAntenna()
        getRightAntenna()
    }
}

gui --> aba

aba --|> ba
aba --> pf

pf --> Ant

gui --> bg
ba --> bg

gui ---> xgraph
bg ---|> xgraph


@enduml